<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/btn_registro2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:onClick="registrarUsuario"
        app:layout_constraintEnd_toEndOf="@+id/pass3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pass3"
        app:layout_constraintTop_toBottomOf="@+id/pass3"
        app:srcCompat="@drawable/btn_inicia_registrate" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/et_pass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/usuario3"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/usuario3"
        app:layout_constraintTop_toBottomOf="@+id/usuario3" />

    <EditText
        android:id="@+id/pass3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/et_confPass"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/pass2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/pass2"
        app:layout_constraintTop_toBottomOf="@+id/pass2" />

    <EditText
        android:id="@+id/usuario3"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/et_confUser"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/usuario2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usuario2"
        app:layout_constraintTop_toBottomOf="@+id/usuario2" />

    <EditText
        android:id="@+id/usuario2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="164dp"
        android:background="@android:drawable/editbox_background"
        android:ems="10"
        android:hint="@string/et_user"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/btn_volver2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_volver" />
</androidx.constraintlayout.widget.ConstraintLayout>