<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_blanco"
    tools:context=".DetallesProducto">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/roboto_bold"
        android:text="Detalles del Producto"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescripcionProducto"
        android:layout_width="330dp"
        android:layout_height="200dp"
        android:layout_marginTop="92dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvUnidadesProducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvUnidadesProducto"
        app:layout_constraintTop_toBottomOf="@+id/tvUnidadesProducto" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/hint_descripcion"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/tvDescripcionProducto"
        app:layout_constraintEnd_toEndOf="@+id/tvDescripcionProducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvDescripcionProducto" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/hint_unidades"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/tvUnidadesProducto"
        app:layout_constraintEnd_toEndOf="@+id/tvUnidadesProducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvUnidadesProducto" />

    <TextView
        android:id="@+id/tvUnidadesProducto"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/tvNombreProducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombreProducto"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreProducto" />

    <TextView
        android:id="@+id/tvNombreProducto"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/hint_nombreProducto"
        android:textColor="#3F51B5"
        app:layout_constraintBottom_toTopOf="@+id/tvNombreProducto"
        app:layout_constraintEnd_toEndOf="@+id/tvNombreProducto"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tvNombreProducto" />

    <ImageView
        android:id="@+id/btn_volver3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/btn_volver" />

</androidx.constraintlayout.widget.ConstraintLayout>